<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/darker_gray"
    tools:context=".fragments.InputEceranFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/simpanDataBtn"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="10dp"
        android:id="@+id/formInputLayout"
        android:paddingEnd="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_date"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal"
                    android:textColor="@color/textBlack"
                    android:textSize="16sp" />

                <TextView
                    android:layout_marginStart="4dp"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_date"
                    android:text="20-11-2020"
                    android:textColor="@color/textBlack"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_action_date"
                    android:id="@+id/datepicker_btn"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/layout_date"
                android:layout_above="@id/tambahIkanBtn"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/namapasar"
                    android:textColor="@color/textBlack"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/namaPasarSp"
                    android:layout_width="350dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_ikank"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/tambahIkanBtn"
                android:layout_alignParentBottom="true"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="16dp"
                android:text="@string/tambah_ikan" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/simpanDataBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:text="@string/simpan" />

</RelativeLayout>